# python-orb

./: .gitignore  README.md  pyproject.toml  tox.ini
.circleci/: config.yml  config.yml.bak  test-deploy.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST.md
sample_pip/: dep-setup.py  setup.py
sample_pip/src/: example.py
sample_pip/tests/: test_ex.py
sample_pip_pyproject/: pyproject.toml
sample_pipenv/: Pipfile  test.txt
sample_poetry/: pyproject.toml
sample_uv/: pyproject.toml
sample_uv/tests/: test_job.py
src/: @orb.yml
src/commands/: coverage.yml  dist.yml  install-advanced.yml  install-deps-pipenv.yml  install-deps-poetry.yml  install-deps.yml  install-packages.yml  install-pipenv-deps.yml  install-pipenv.yml  install.yml  load-cache.yml  load-venv-cache.yml  release.yml  save-cache.yml  save-venv-cache.yml  test.yml  uninstall-deps.yml
src/examples/: using-test-job.yml  using-tox.yml  work-with-cache-pipenv.yml  work-with-cache.yml  work-with-pip.yml  work-with-pipenv-deps.yml  work-with-pipenv.yml  work-with-poetry.yml  work-with-uv.yml
src/executors/: default.yml
src/jobs/: pipenv-install.yml  poetry-install.yml  test.yml
src/scripts/: alias-python.sh  auto-install-command.sh  auto-test-command.sh  cache-link-lockfile.sh  cache-restore.sh  cache-save.sh  detect-env.sh  ensure-test-tool.sh  export-detect-env.sh  install-python.sh  pypa-build.sh  pypa-wheel.sh  save-python-version.sh  utils.sh
