# Example toml for integration testing - this is not used by the orb in anyway
[project]
authors=[
    {name="TEST", email="test@test.com"}
]
name="test"
description="none"
version = "0.0.1"
requires-python=">3.11"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=["test"]